--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 streamlit==0.84.1
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-pandasql
-plotly
-pillow
-requests
+pandas==1.3.1
+numpy==1.20.0
+seaborn==0.11.1
+matplotlib==3.4.2
+pandasql==0.7.3
+plotly==5.1.0
+pillow==8.3.1
+requests==2.26.0
